Fixed card alignment in two spots.

--- a/src/styles/components/pages/studentDashboard/studentDashboardSectionList.scss
+++ b/src/styles/components/pages/studentDashboard/studentDashboardSectionList.scss
@@ -38,7 +38,7 @@
         .student-button-container {
           padding-top: 1rem;
           display: flex;
-          justify-content: space-evenly;
+          justify-content: space-between;
           align-items: center;
           .content {
             width: unset;
